k8s/eks/external-dns/dev/test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: echoserver.mycluster.example.org, echoserver.example.orgs
spec:
  rules:
    # - host: eks-twitter.net
    - http:
        paths:
          - path: /*
            backend:
              serviceName: echoserver
              servicePort: 80
